<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="buttonlogin">Login</string>
    <string name="buttonregister">Register</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="buttonsubmit">Submit</string>
    <string name="buttoncancel">Cancel</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_home_screen">HomeScreenActivity</string>
    <string name="numberone">Number one</string>
    <string name="numbertwo">Number two</string>
    <string name="btntrycommand">Try command</string>
    <string name="tbpassword">Toggle Button</string>
    <string name="results">Results</string>
    <string name="buttonadd">+</string>
    <string name="buttonsubtraction">-</string>
    <string name="buttondivision">/</string>
    <string name="buttonmultiply">x</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="firstname">First Name</string>
    <string name="id">Id No</string>
    <string name="spinner">Chose The Town</string>

    <string-array name="city_arrays">
        <item>Kakamega</item>
        <item>Kisumu</item>
        <item>Eldoret</item>
        <item>Nakuru</item>
        <item>Kericho</item>
        <item>Naivasha</item>
        <item>Mombasa</item>
    </string-array>

    <string name="title_activity_check">Check</string>
    <string name="meat">Meat</string>
    <string name="sukuma">Sukuma</string>
    <string name="pork">Pork</string>
    <string name="fish">Fish</string>
    <string name="saga">Saga</string>
    <string name="btndisplay">Display</string>
     <string name="favourite">Get Your Favourite Food</string>
    

</resources>
