<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/purple" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favourite" 
        android:fontFamily="gabriola"
        android:textSize="15sp"
        android:layout_margin="30dp"/>

    <CheckBox
        android:id="@+id/chkmeat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/meat" 
        android:onClick="onCheckboxClicked"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <CheckBox
        android:id="@+id/chksukuma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sukuma"
        android:onClick="onCheckboxClicked"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/chkpork"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pork"
        android:onClick="onCheckboxClicked"
        android:textColor="@color/white" />

    <CheckBox
        android:id="@+id/chkfish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fish"
        android:onClick="onCheckboxClicked"
          android:textColor="@color/white" 
     />

    <CheckBox
        android:id="@+id/chksaga"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saga" 
        android:onClick="onCheckboxClicked"
        android:textColor="@color/white"/>

    <Button
        android:id="@+id/btndisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btndisplay" />

</LinearLayout>
