<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/adroid"
    android:orientation="vertical" >
    
    
      <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btnadd"
        android:layout_alignParentTop="true"
        android:text="@string/numberone" 
        android:textSize="25sp"
        android:textColor="@color/black"/>
    
    <EditText
        android:id="@+id/etnumberone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="32dp"
        android:background="@color/white"
        android:ems="10"
        android:inputType="number" />
    
    
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/etnumberone"
        android:layout_marginTop="25dp"
        android:text="@string/numbertwo"
        android:textSize="25sp"
        android:textColor="@color/black" />
    
     
    <EditText
        android:id="@+id/etnumbertwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="17dp"
        android:ems="10"
        android:inputType="number" 
        android:background="@color/white"/>
    
    

    <Button
        android:id="@+id/btnmultiply"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/btnresults"
        android:layout_below="@+id/btnadd"
        android:layout_margin="5dp"
        android:layout_marginTop="38dp"
        android:background="#000000"
        android:text="@string/buttonmultiply"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btndivision"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnmultiply"
        android:layout_alignBottom="@+id/btnmultiply"
        android:layout_alignParentLeft="true"
        android:layout_margin="20dp"
        android:background="#000000"
        android:text="@string/buttondivision"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnresults"
        android:layout_margin="20dp"
        android:layout_marginTop="26dp"
        android:background="#000000"
        android:text="@string/buttonadd"
        android:textColor="@color/white" />

  

    <Button
        android:id="@+id/btnresults"
        android:layout_width="237dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etnumbertwo"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp"
        android:layout_marginTop="51dp"
        android:background="#000000"
        android:text="@string/buttonresults"
        android:textColor="@color/white" />

    
   

    
    <Button
        android:id="@+id/btnsubtraction"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnadd"
        android:layout_alignBottom="@+id/btnadd"
        android:layout_alignRight="@+id/btnmultiply"
        android:layout_margin="5dp"
        android:background="#000000"
        android:text="@string/buttonsubtraction"
        android:textColor="@color/white" />

    
</RelativeLayout>